--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -753,9 +753,11 @@ table.auTable tr td {
     overflow: hidden;
 }
 .sliderView {
+    float: right;
     width: 242px;
     height: 103px;
     overflow: hidden;
+    margin: 14px;
 }
 
 /* Gnb : md */
@@ -949,10 +951,10 @@ table.auTable tr td {
 
 /* Header : left-drop-Box */
 .dropdown:hover .left-drop-Box {
-    display: block;
+    opacity: 1;
+    visibility: visible;
 }
 .left-drop-Box {
-    display: none;
     position: absolute;
     top: 10px;
     left: 149px;
@@ -960,6 +962,8 @@ table.auTable tr td {
     width: 380px;
     border: 1px solid #acacac;
     box-shadow: 5px 5px 25px #e1e1e1;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .left-drop-Box:after,
@@ -1841,7 +1845,7 @@ table.auTable tr td {
     font-weight: 300;
 }
 .w-info dt {
-    float: left;
+    display: inline-block;
 }
 .w-info dt .nBox {
     display: inline-block;
@@ -1878,7 +1882,7 @@ table.auTable tr td {
     background: #b5b5b5;
     width: 1px;
     height: 12px;
-    margin: 0 10px -3px;
+    margin: 0 10px;
 }
 .w-info .w-name {
     font-size: 14px;
@@ -2667,7 +2671,7 @@ table.classTable tr td.w-data {
     margin: 21px 30px 0 0;
 }
 .total-PriceBox .price-img {
-    padding: 0 10px;
+    padding: 19px 10px;
 }
 
 /* subContainer : Content : packageTable */
