--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -746,6 +746,13 @@ table.auTable tr td {
 .bx-wrapper .bx-pager.bx-default-pager a.active {
     width: 30px;
 }
+.bx-wrapper .bx-controls-direction a {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+}
 .sliderGNB {
     width: 120px;
     height: 188px;
@@ -1426,10 +1433,49 @@ table.auTable tr td {
     width: 160px; 
 }
 .Lnb h2 {
+    font-size: 19px;
+    font-weight: 600;
+    color: #363636;
     border: 1px solid #b4b4b4;
-    height: 79px;
-    line-height: 79px;
+    height: 80px;
+    line-height: 80px;
     text-align: center;
+}
+.Lnb .lnb-List .lnb-List-Tit a .arrow-Btn {
+    background: url("../../img/front/gnb/icon_arrow.gif") no-repeat -20px -12px;
+    float: right;
+    width: 9px;
+    height: 6px;
+    margin: 21px 10px 21px 0;
+}
+.Lnb .lnb-List .lnb-List-Tit.hover a .arrow-Btn {
+    background: url("../../img/front/gnb/icon_arrow.gif") no-repeat -20px 0;
+}
+.Lnb .lnb-List .lnb-List-Tit a {
+    display: block;
+    height: 50px;
+    font-size: 15px;
+    color: #363636;
+    line-height: 50px;
+    border-bottom: 1px solid #ececec;
+    padding-left: 10px;
+}
+.Lnb .lnb-List .lnb-List-Tit.hover a {
+    color: #0d74ae;
+}
+.Lnb .lnb-List .lnb-List-Depth {
+    display: none;
+    background: #f9f9f9;
+    padding: 20px 0 20px 20px;
+    border-bottom: 1px solid #ececec;
+}
+.Lnb .lnb-List .lnb-List-Depth dl dt {
+    line-height: 20px;
+}
+.Lnb .lnb-List .lnb-List-Depth dl dt a {
+    display: block;
+    font-size: 13px;
+    color: #3a3a3a;
 }
 
 
@@ -2161,8 +2207,8 @@ table.lecTable tr td .MoreBtn {
 }
 .willbes-Layer-Box-sm .closeBtn {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 0;
+    right: 10px;
 }
 .tabWrap.tabDepth1 {
     height: 60px;
@@ -3380,6 +3426,141 @@ table.deliveryTable input.phone {
 table.finTable tr td {
     height: 40px;
 }
+
+
+
+/*********************************************     PROF PAGE     *********************************************/
+.sliderPromotion .bx-wrapper .bx-prev {
+    background: url("../../img/front/prof/btn_prev.png") no-repeat 0 0;
+}
+.sliderPromotion .bx-wrapper .bx-next {
+    background: url("../../img/front/prof/btn_next.png") no-repeat 0 0;
+    left: 20px;
+}
+.sliderPromotion .bx-wrapper .bx-controls-direction a {
+    width: 20px;
+    height: 20px;
+
+}
+.sliderPromotion .bx-wrapper .bx-controls-direction {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 20px;
+}
+.sliderPromotion {
+    width: 460px;
+    height: 220px;
+    overflow: hidden;
+}
+
+.willbes-Prof-Subject {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 32px;
+    padding: 80px 0 20px 15px;
+}
+
+ul li.profList {
+    position: relative;
+    background: #f4f3f3;
+    width: 226px;
+    height: 226px;
+    float: left;
+    margin-right: 12px;
+    margin-bottom: 12px;   
+}
+ul li.profList.nth {
+    margin-right: 0;
+}
+ul li.profList:hover .line {
+    display: block;
+    border: 1px solid #1b6db6;
+    width: 100%;
+    height: 100%;
+}
+ul li.profList a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+ul li.profList a .line {
+    display: none;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-indent: -9999px;
+}
+ul li.profList .Obj {
+    position: absolute;
+    top: 35px;
+    left: 20px;
+    font-size: 14px;
+    color: #999;
+    line-height: 18px;
+}
+ul li.profList .Name {
+    position: absolute;
+    top: 82px;
+    left: 20px;
+    font-size: 22px;
+    font-weight: 600;
+    color: #363636;
+    line-height: 24px;
+}
+ul li.profList .Name strong {
+    color: #1b6db6;
+}
+ul li.profList .Name img.N {
+    position: absolute;
+    top: 26px;
+    right: -14px;
+}
+ul li.profList img.profImg {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+ul li.profList img.Evt {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+ul li.profList .w-notice {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    z-index: 2;
+}
+ul li.profList .w-notice dl dt {
+    position: relative;
+    width: 68px;
+    height: 22px;
+    border: 1px solid #c9c9c9;
+}
+ul li.profList .w-notice dl dt:hover {
+    border: 1px solid #898989;
+    z-index: 1;
+}
+ul li.profList .w-notice dl dt:first-child {
+    margin-bottom: -1px;
+}
+
+ul li.profList .w-notice a {
+    background: #fff;
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 11px;
+    color: #7d7e85;
+    text-align: center;
+    line-height: 20px;
+}
+
 
 
 
