--- a/public/css/front/basic.css
+++ b/public/css/front/basic.css
@@ -284,6 +284,18 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+select {
+  border: 1px solid #d4d4d4;
+}
+button {
+  width: 100%;
+  height: 100%;
+}
+button span {
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+}
 a, a:hover, a:active, a:link, a:visited {
 	text-decoration: none;
 	color: inherit;
@@ -343,6 +355,10 @@ strong {
   width: 100%;
   margin: 0 auto;
 }
+.btnAuto90 {
+  width: 90px;
+  margin: 0 auto;
+}
 .btnAuto120 {
   width: 120px;
   margin: 0 auto;
@@ -394,6 +410,9 @@ strong {
 .mb10 {
   margin-bottom: 10px !important;
 }
+.mb15 {
+  margin-bottom: 15px !important;
+}
 .mb20 {
   margin-bottom: 20px !important;
 }
@@ -442,6 +461,16 @@ strong {
 .pt30 {
   padding-top: 30px !important;
 }
+.pt40 {
+  padding-top: 40px !important;
+}
+.pt50 {
+  padding-top: 50px !important;
+}
+
+.pl-zero {
+  padding-left: 0px !important;
+}
 .pl20 {
   padding-left: 20px !important;
 }
@@ -454,6 +483,7 @@ strong {
 .pl40 {
   padding-left: 40px !important;
 }
+
 .pb110 {
   padding-bottom: 110px !important;
 }
@@ -582,12 +612,14 @@ strong {
 .bdb-black2 {
   border-bottom: 2px solid #000;
 }
+.bdb-gray {
+  border-bottom: 1px solid #959595;
+}
 .bd-none {
   border: none !important;
 }
 
-.upper-black thead tr th,
-.upper-black thead tr td {
+.upper-black thead tr th {
   border-top: 1px solid #959595;
 }
 .upper-gray tbody tr th,
